--- a/jianshu-manager-web/src/main/webapp/css/page.css
+++ b/jianshu-manager-web/src/main/webapp/css/page.css
@@ -53,3 +53,10 @@
     background-color: #fff;
     border-color: #ddd
 }
+.content{
+    position:relative; margin-left:10px; margin-top:50px;
+}
+.all{
+    left: 20%;
+    position: relative;
+}
