--- a/jianshu-manager-web/src/main/webapp/css/page.css
+++ b/jianshu-manager-web/src/main/webapp/css/page.css
@@ -60,3 +60,168 @@
     left: 20%;
     position: relative;
 }
+.userPagination {
+     display: inline-block;
+     padding-left: 0;
+     margin: 20px 0;
+     border-radius: 4px
+ }
+
+.userPagination > li {
+    display: inline
+}
+
+.userPagination > li > a, .userPagination > li > span {
+    position: relative;
+    float: left;
+    padding: 6px 12px;
+    margin-left: -1px;
+    line-height: 1.42857143;
+    color: #337ab7;
+    text-decoration: none;
+    background-color: #fff;
+    border: 1px solid #ddd
+}
+
+.userPagination > li:first-child > a, .userPagination > li:first-child > span {
+    margin-left: 0;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px
+}
+
+.userPagination > li:last-child > a, .userPagination > li:last-child > span {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px
+}
+
+.userPagination > li > a:focus, .userPagination > li > a:hover, .userPagination > li > span:focus, .userPagination > li > span:hover {
+    z-index: 3;
+    color: #23527c;
+    background-color: #eee;
+    border-color: #ddd
+}
+
+.userPagination > .active > a, .userPagination > .active > a:focus, .userPagination > .active > a:hover, .userPagination > .active > span, .userPagination > .active > span:focus, .userPagination > .active > span:hover {
+    z-index: 2;
+    color: #fff;
+    cursor: default;
+    background-color: #337ab7;
+    border-color: #337ab7
+}
+
+.userPagination > .disabled > a, .userPagination > .disabled > a:focus, .userPagination > .disabled > a:hover, .userPagination > .disabled > span, .userPagination > .disabled > span:focus, .userPagination > .disabled > span:hover {
+    color: #777;
+    cursor: not-allowed;
+    background-color: #fff;
+    border-color: #ddd
+}
+.userPagination {
+    display: inline-block;
+    padding-left: 0;
+    margin: 20px 0;
+    border-radius: 4px
+}
+
+.userPagination > li {
+    display: inline
+}
+
+.userPagination > li > a, .userPagination > li > span {
+    position: relative;
+    float: left;
+    padding: 6px 12px;
+    margin-left: -1px;
+    line-height: 1.42857143;
+    color: #337ab7;
+    text-decoration: none;
+    background-color: #fff;
+    border: 1px solid #ddd
+}
+
+.userPagination > li:first-child > a, .userPagination > li:first-child > span {
+    margin-left: 0;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px
+}
+
+.userPagination > li:last-child > a, .userPagination > li:last-child > span {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px
+}
+
+.userPagination > li > a:focus, .userPagination > li > a:hover, .userPagination > li > span:focus, .userPagination > li > span:hover {
+    z-index: 3;
+    color: #23527c;
+    background-color: #eee;
+    border-color: #ddd
+}
+
+.userPagination > .active > a, .userPagination > .active > a:focus, .userPagination > .active > a:hover, .userPagination > .active > span, .userPagination > .active > span:focus, .userPagination > .active > span:hover {
+    z-index: 2;
+    color: #fff;
+    cursor: default;
+    background-color: #337ab7;
+    border-color: #337ab7
+}
+
+.userPagination > .disabled > a, .userPagination > .disabled > a:focus, .userPagination > .disabled > a:hover, .userPagination > .disabled > span, .userPagination > .disabled > span:focus, .userPagination > .disabled > span:hover {
+    color: #777;
+    cursor: not-allowed;
+    background-color: #fff;
+    border-color: #ddd
+}
+.articlePagination {
+    display: inline-block;
+    padding-left: 0;
+    margin: 20px 0;
+    border-radius: 4px
+}
+
+.articlePagination > li {
+    display: inline
+}
+
+.articlePagination > li > a, .articlePagination > li > span {
+    position: relative;
+    float: left;
+    padding: 6px 12px;
+    margin-left: -1px;
+    line-height: 1.42857143;
+    color: #337ab7;
+    text-decoration: none;
+    background-color: #fff;
+    border: 1px solid #ddd
+}
+
+.articlePagination > li:first-child > a, .articlePagination > li:first-child > span {
+    margin-left: 0;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px
+}
+
+.articlePagination > li:last-child > a, .articlePagination > li:last-child > span {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px
+}
+
+.articlePagination > li > a:focus, .articlePagination > li > a:hover, .articlePagination > li > span:focus, .articlePagination > li > span:hover {
+    z-index: 3;
+    color: #23527c;
+    background-color: #eee;
+    border-color: #ddd
+}
+
+.articlePagination > .active > a, .articlePagination > .active > a:focus, .articlePagination > .active > a:hover, .articlePagination > .active > span, .articlePagination > .active > span:focus, .articlePagination > .active > span:hover {
+    z-index: 2;
+    color: #fff;
+    cursor: default;
+    background-color: #337ab7;
+    border-color: #337ab7
+}
+
+.articlePagination > .disabled > a, .articlePagination > .disabled > a:focus, .articlePagination > .disabled > a:hover, .articlePagination > .disabled > span, .articlePagination > .disabled > span:focus, .articlePagination > .disabled > span:hover {
+    color: #777;
+    cursor: not-allowed;
+    background-color: #fff;
+    border-color: #ddd
+}
