--- a/jianshu-manager-web/src/main/webapp/css/write.css
+++ b/jianshu-manager-web/src/main/webapp/css/write.css
@@ -9,18 +9,47 @@
 }
 .fuwenben{
     height: 350px;
-    width: 800px;
+   width: 780px;
 
 }
 .chooseArticle{
-    background-color: #646464;
+    background-color: #999999;
 }
 .chooseMouse{
-    background-color: #646464;
+    background-color: #999999;
 }
 .chooseCollection{
     background-color: #7274A7;
 }
 .chooseCollectionMouse{
     background-color: #7274A7;
+}
+a{
+    text-decoration: none;
+}
+.file {
+    position: relative;
+    display: inline-block;
+    background: #D0EEFF;
+    border: 1px solid #99D3F5;
+    border-radius: 4px;
+    padding: 4px 12px;
+    overflow: hidden;
+    color: #1E88C7;
+    text-decoration: none;
+    text-indent: 0;
+    line-height: 20px;
+}
+.file input {
+    position: absolute;
+    font-size: 100px;
+    right: 0;
+    top: 0;
+    opacity: 0;
+}
+.file:hover {
+    background: #AADFFD;
+    border-color: #78C3F3;
+    color: #004974;
+    text-decoration: none;
 }
