--- a/jianshu-manager-web/src/main/webapp/css/write.css
+++ b/jianshu-manager-web/src/main/webapp/css/write.css
@@ -4,6 +4,9 @@
 .textNewName{
     display:inline !important;
 }
+.textOldName{
+    display: none;
+}
 .deleteArticleShow{
     display:inline !important;
 }
